fix: update Lua workspace library path in settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "Lua.diagnostics.globals": [
     "turtle"
+  ],
+  "Lua.workspace.library": [
+    "J:/Workspace/Minecraft/cc-tweaked-scripts/libs/lua-ls-cc-tweaked/library"
   ]
 }
